# DOWTrade

./: .env.example  .gitignore  README.md  pyproject.toml
data/: mym_synthetic_30d.csv  mym_synthetic_3d.csv
deploy/: dowtrade.service
reports/: trades.csv  trades_live.csv
src/: config.py  main.py
src/backtest/: __main__.py  generate_data.py  harness.py  reports.py  stubs.py  synthetic.py
src/broker/: base.py  models.py  tastytrade.py
src/dashboard/: app.py
src/dashboard/static/: app.js
src/dashboard/templates/: base.html  disagreements.html  equity.html  index.html  journal.html  trades.html
src/data/: bars.py  cross_filter.py  features.py
src/db/: repo.py  schema.sql
src/journal/: daily.py  scheduler.py
src/live/: dxlink.py  runner.py  yfinance_poller.py
src/llm/: base.py  claude_sdk.py  deepseek_risk.py  gemini_execution.py  haiku_structural.py
src/llm/prompts/: execution.txt  risk_audit.txt  structural.txt
src/safety/: guards.py
src/sizing/: risk_unit.py
tests/: conftest.py  test_backtest.py  test_dashboard.py  test_dxlink.py  test_features.py  test_journal.py  test_llm.py  test_runner.py  test_safety.py  test_sizing.py  test_stubs.py  test_synthetic.py  test_tastytrade.py
tests/integration/: test_llm_smoke.py
