[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dowtrade-bot"
version = "0.1.0"
description = "Paper-trading bot for Micro E-mini Dow futures (MYM) on Tradovate demo"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "pydantic-settings",
    "httpx",
    "apscheduler",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "anthropic",
    "google-generativeai",
    "huggingface-hub",
    "pandas",
    "numpy",
    "python-dateutil",
    "pytz",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
